package br.com.project.hydroflow.repository;

import br.com.project.hydroflow.domain.Role;
import org.springframework.data.jpa.repository.JpaRepository;
import org.springframework.stereotype.Repository;

@Repository
public interface RoleRepository extends JpaRepository<Role, Long> {

    long countByPermissions_Name(String permissionName);
}
