@startuml user-access-classes
title User Access Module - Class Diagram

skinparam classAttributeIconSize 0
top to bottom direction
hide empty members

class UserController {
  - userService: UserService
  + createUser(userDTO: UserDTO)
  + updateUser(id: Long, updateUserDTO: UpdateUserDTO)
}

class UserManagementController {
  - userService: UserService
  - roleService: RoleService
  - permissionService: PermissionService
  + findAllUsers()
  + updateUserRole(id: Long, dto: UpdateUserRoleDTO)
  + deleteUser(id: Long)
  + findAllRoles()
  + createRole(roleDTO: RoleDTO)
  + updateRole(id: Long, roleDTO: RoleDTO)
  + deleteRole(id: Long)
}

class UserService {
  - userRepository: UserRepository
  - roleService: RoleService
  - passwordEncoder: PasswordEncoder
  + saveUser(userDTO: UserDTO)
  + updateUser(id: Long, updateUserDTO: UpdateUserDTO)
  + updateUserRole(id: Long, dto: UpdateUserRoleDTO)
  + deleteUser(id: Long)
}

class RoleService {
  - roleRepository: RoleRepository
  - userRepository: UserRepository
  + findById(id: Long)
  + saveRole(roleDTO: RoleDTO)
  + updateRole(id: Long, roleDTO: RoleDTO)
  + deleteRole(id: Long)
}

interface UserRepository {
  + findById(id: Long)
  + findByEmail(email: String)
  + existsByEmail(email: String)
  + save(user: User)
  + delete(user: User)
}

interface RoleRepository {
  + findById(id: Long)
  + countByPermissions_Name(name: String)
  + save(role: Role)
}

class User {
  - id: Long
  - name: String
  - email: String
  - password: String
  - firstAccess: boolean
  - role: Role
}

class Role {
  - id: Long
  - name: String
  - permissions: Set<Permission>
}

class Permission {
  - id: Long
  - name: String
}

class UserDTO {
  + id: Long
  + name: String
  + email: String
  + password: String
  + roleId: Long
}

class UpdateUserRoleDTO {
  + roleId: Long
}

class RoleDTO {
  + id: Long
  + name: String
}

UserController --> UserService
UserManagementController --> UserService
UserManagementController --> RoleService
UserController --> UserDTO
UserService --> UserRepository
UserService --> RoleService
RoleService --> RoleRepository
RoleService --> UserRepository
UserRepository --> User
RoleRepository --> Role
User --> Role
Role --> Permission

@enduml
